--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: umtcnshn.github.io/assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -58,7 +58,7 @@ authors:
         name: Amipima
         bio: A man who exists
         external-image: false
-        picture: assets/images/profile.jpg
+        picture: umtcnshn.github.io/assets/images/profile.jpg
         #twitter: johndoe
 
 # do you want a larger site? change the option below
