--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus:
 # google: mygoogle
 # instagram: https://www.instagram.com/umtcshn/?hl=en
 # pinterest: mypinterest
-linkedin: https://www.linkedin.com/in/umitcan-sahin-02b44679/
+linkedin: https://www.linkedin.com/in/umitcan-sahin-02b44679/?originalSubdomain=tr
 # youtube: myyoutube
 # spotify: myspotify
 github: https://github.com/umtcnshn
